# app/Models/Keyword.php
@@ -8,4 +8,17 @@ use Illuminate\Database\Eloquent\Model;
 class Keyword extends Model
 {
     use HasFactory;
+    protected $fillable = ['keyword'];
+
+    function translation(){
+        $lang = app()->getLocale();
+        $language = Language::where('language',$lang)->first();
+        if($language){
+            $translation = Translation::where('language_id',$language->id)->where('keyword_id',$this->id)->first();
+            if($translation){
+                return $translation->translation;
+            }
+        }
+        return $this->keyword;
+    }
 }
