# app/Models/Language.php
@@ -8,4 +8,5 @@ use Illuminate\Database\Eloquent\Model;
 class Language extends Model
 {
     use HasFactory;
+    protected $fillable = ['language'];
 }
